# bot_me_maybe

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_bot.py  setup.cfg
bmmb/core/app/: config.py
bmmb/data/: mongo_utils.py
bmmb/data/database/: database.py  database_config.py  database_interface.py  local_database.py  mongo_database.py  table.py
bmmb/examples/: database_example.py
bmmb/tests/data/database/: test_config.py  test_database.py  test_database_interface.py  test_local_database.py  test_mongo_database.py  test_table.py
bot_me_maybe/: __init__.py  plugin_base.py  telegram_bot.py
bot_me_maybe/api/: aiogram_api.py  pyrogram_api.py  python_telegram_bot_api.py  telegram_api.py
bot_me_maybe/chatbot/: __init__.py  cli_user_interface.py  command_description.py  core.py  dummy_engine.py  engine.py  ptb_user_interface.py  scenario.py  user_interface.py
bot_me_maybe/chatbot/drafts/: command_parser.py
bot_me_maybe/plugins/: command_plugin.py
sample_app_data/: config.toml
