# pyproject.toml for the bmmb package
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bmmb"
description = "BotMeMaybe - a collection of utils for easy bot development"
version = "0.1.0"
requires-python = ">=3.7"
readme = "README.md"
#license = {text = "LICENSE"}
license = { file = "LICENSE", encoding = "utf-8" }

dependencies = [
    "mongoengine",
]
#[dependencies]
#mongoengine = "*"

authors = [
    { name = "Petr Lavrov", email = "petr.b.lavrov@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
]

# todo: try poetry
#[tool.poetry]
#name = "bmmb"
#version = "0.1.0"
#description = "BotMeMaybe - a collection of utils for easy bot development"