# pyproject.toml for the bmmb package
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bmmb"
description = "BotMeMaybe - a collection of utils for easy bot development"
#version = "0.1.0"
requires-python = ">=3.7"
#readme = "README.md"
#license = {text = "LICENSE"}
license = { file = "LICENSE", encoding = "utf-8" }
dynamic = ["version", "readme"]

dependencies = [
    "mongoengine",
    "python-telegram-bot", # todo: clarify version - latest
    "aiogram", # todo: clarify version - latest
]

[project.optional-dependencies]
pyrogram = ["pyrogram"]
full = ["pyrogram", "injector"]

authors = [
    { name = "Petr Lavrov", email = "petr.b.lavrov@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
version = {attr = "bmmb.__version__"}
readme = {file = ["README.md"]}
# todo: try poetry
#[tool.poetry]
#name = "bmmb"
#version = "0.1.0"
#description = "BotMeMaybe - a collection of utils for easy bot development"