; # example
;[metadata]
;name = my_package
;version = attr: my_package.VERSION
;author = Josiah Carberry
;author_email = josiah_carberry@brown.edu
;description = My package description
;long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
;keywords = one, two
;license = BSD-3-Clause
;classifiers =
;    Framework :: Django
;    Programming Language :: Python :: 3
;
;[options]
;zip_safe = False
;include_package_data = True
;packages = find:
;python_requires = >=3.7
;install_requires =
;    requests
;    importlib-metadata; python_version<"3.8"
;
;[options.package_data]
;* = *.txt, *.rst
;hello = *.msg
;
;[options.entry_points]
;console_scripts =
;    executable-name = my_package.module:function
;
;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3
;
;[options.packages.find]
;exclude =
;    examples*
;    tools*
;    docs*
;    my_package.tests*

; My package description
; =======================
[metadata]
name = bot_me_maybe
version = attr: bot_me_maybe.__version__
author = Petr Lavrov
author_email = petr.b.lavrov@gmail.com
description = An extensible OOP plugin-based python telegram library, meant to cover basic features like auto-registering the commands and user/config/event logging to disk, that are for some reason missing from the most popular frameworks..
file: README.md, LICENSE
url = https://github.com/Augmented-development/BotMeMaybe

classifiers =
    Programming Language :: Python :: 3



[options.extras_require]
ptb = python-telegram-bot
aiogram = aiogram
pyrogram = pyrogram

