[metadata]
name = bot_me_maybe
version = attr: bmmb.__version__
author = Petr Lavrov
author_email = petr.b.lavrov@gmail.com
description = An extensible OOP plugin-based python telegram library, meant to cover basic features like auto-registering the commands and user/config/event logging to disk, that are for some reason missing from the most popular frameworks.
url = https://github.com/calmmage/bot_me_maybe
license = MIT
long_description = file: README.md

classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    python-telegram-bot

[options.extras_require]
aiogram = aiogram
pyrogram = pyrogram
mongoengine = mongoengine